# kaiyuanshe-oss-daily

./: .env.example  .env.production.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: open-source-daily.yml
configs/: keywords.yaml  kol_twitter_list.yaml  sources.yaml
data/: osdaily.sqlite3
docs/: acceptance-matrix.md  architecture.md  deployment.md  p7-content-watch.md  release-checklist.md  render-deployment.md
output/daily/: open-source-daily-2026-06-17.md  open-source-daily-2026-06-18.md  open-source-daily-2026-06-19.md  open-source-daily-2026-06-20.md  open-source-daily-2026-06-21.md  open-source-daily-2026-06-22.md  open-source-daily-2026-06-23.md  open-source-daily-2026-06-24.md  open-source-daily-2026-06-25.md  open-source-daily-2026-06-26.md  open-source-daily-2026-06-27.md  open-source-daily-2026-06-28.md  open-source-daily-2026-06-29.md  open-source-daily-2026-06-30.md  open-source-daily-2026-07-01.md  open-source-daily-2026-07-02.md  open-source-daily-2026-07-03.md  open-source-daily-2026-07-04.md  open-source-daily-2026-07-05.md  open-source-daily-2026-07-06.md  open-source-daily-2026-07-07.md  open-source-daily-2026-07-08.md  open-source-daily-2026-07-09.md  open-source-daily-2026-07-10.md  (+52 more)
scripts/: backup-data.sh  deploy-prod.sh
tests/: test_admin.py  test_collectors.py  test_enrichment.py  test_processing.py  test_quality.py  test_readiness.py  test_report_notify.py  test_runner.py  test_scheduler.py  test_storage.py  test_validation.py
(+15 files in other folders)
